--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,34 @@ spring.datasource.druid.filters=stat,wall,log4j
 spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 # 合并多个DruidDataSource的监控数据
 spring.datasource.druid.useGlobalDataSourceStat=true
+
+## Redis 配置
+#redis.host=127.0.0.1
+#redis.port=6379
+#spring.redis
+#redis.timeout=300
+#redis.password=
+##  poolMaxTotal 最大连接数  poolMaxIdle 最大空闲 poolMaxWait 最大等待时间
+#redis.poolMaxTotal=1000
+#redis.poolMaxIdle=500
+#redis.poolMaxWait=300
+
+#redis
+#redis数据库索引，默认为0
+spring.redis.database=0
+#服务地址
+spring.redis.host=localhost
+#端口
+spring.redis.port=6379
+#密码，默认为空，本地没有设置密码，所以这里不填写
+spring.redis.password=
+#连接池最大的连接数，若使用负值表示没有限制
+spring.redis.jedis.pool.max-active=8
+#连接池最大阻塞等待时间，若使用负值表示没有限制
+spring.redis.jedis.pool.max-wait=-1ms
+#连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=500
+#连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+#连接超时时间（单位为毫秒）
+spring.redis.timeout=300ms
