--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/newsrecommendation?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/newsrecommendation?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 
 
 #mybatis 配置
 mybatis.type-aliases-package=com.example.newsrecommendation.entity
-mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.configuration.default-fetch-size=100
-mybatis.configuration.default-statement-timeout=3000
+#mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.configuration.default-fetch-size=100
+#mybatis.configuration.default-statement-timeout=3000
+# mapper映射 地址配置
+mybatis.config-location=classpath:mybatis-config.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
+
 #druid
 # 下面为连接池的补充设置，应用到上面所有数据源中
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
@@ -37,16 +42,6 @@ spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat
 # 合并多个DruidDataSource的监控数据
 spring.datasource.druid.useGlobalDataSourceStat=true
 
-## Redis 配置
-#redis.host=127.0.0.1
-#redis.port=6379
-#spring.redis
-#redis.timeout=300
-#redis.password=
-##  poolMaxTotal 最大连接数  poolMaxIdle 最大空闲 poolMaxWait 最大等待时间
-#redis.poolMaxTotal=1000
-#redis.poolMaxIdle=500
-#redis.poolMaxWait=300
 
 #redis
 #redis数据库索引，默认为0
@@ -67,3 +62,21 @@ spring.redis.jedis.pool.max-idle=500
 spring.redis.jedis.pool.min-idle=0
 #连接超时时间（单位为毫秒）
 spring.redis.timeout=300ms
+
+
+
+#pagehelper分页插件配置
+pagehelper.helperDialect=mysql
+#
+##hadoop
+#spring.hadoop.fsUri=hdfs://master:9000
+
+#MongoDB 配置
+spring.data.mongodb.uri=mongodb://localhost:27017/Test
+
+#RabbitMQ 配置
+spring.application.name=spirng-boot-rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
